# operator-rs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.adoc  Cargo.toml  README.adoc  README.md  bors.toml  deny.toml  operator-it-report.html  renovate.json  rustfmt.toml
crates/containerdebug/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/containerdebug/src/: error.rs  main.rs  system_information.rs
crates/containerdebug/src/system_information/: disk.rs  mod.rs  network.rs  os.rs  resources.rs  user.rs
crates/k8s-version/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
crates/k8s-version/src/: api_version.rs  group.rs  level.rs  lib.rs  version.rs
crates/k8s-version/src/api_version/: darling.rs  mod.rs  serde.rs
crates/k8s-version/src/group/: mod.rs  serde.rs
crates/k8s-version/src/level/: darling.rs  mod.rs  serde.rs
crates/k8s-version/src/version/: darling.rs  mod.rs  serde.rs
crates/operator-core/: Cargo.toml
crates/operator-core/src/: cluster_resources.rs  cpu.rs  iter.rs  labels.rs  memory.rs
crates/operator-core/src/builder/: meta.rs
crates/operator-core/src/commons/: listener.rs  s3.rs  secret_class.rs
crates/operator-core/src/config/: merge.rs
crates/operator-derive/: Cargo.toml
crates/operator-macros/: Cargo.toml
crates/operator-macros/src/: lib.rs
crates/stackable-certs/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml
crates/stackable-certs/src/: cert_builder.rs  lib.rs
crates/stackable-certs/src/ca/: ca_builder.rs  consts.rs  k8s.rs  mod.rs
crates/stackable-certs/src/keys/: ecdsa.rs  mod.rs  rsa.rs
crates/stackable-crd-previewer/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/stackable-crd-previewer/src/: lib.rs
crates/stackable-operator/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml
crates/stackable-operator-derive/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml
crates/stackable-operator-derive/src/: fragment.rs  lib.rs  merge.rs
crates/stackable-operator/crds/: AuthenticationClass.yaml  DummyCluster.yaml  Listener.yaml  ListenerClass.yaml  OpenLineageConnection.yaml  PodListeners.yaml  S3Bucket.yaml  S3Connection.yaml  Scaler.yaml
crates/stackable-operator/fixtures/helm/: input-additional.yaml  input-required.yaml  output.yaml
crates/stackable-operator/src/: cli.rs  client.rs  cluster_resources.rs  config_overrides.rs  cpu.rs  crd.rs  iter.rs  lib.rs  memory.rs  namespace.rs  pod_utils.rs  product_config_utils.rs  role_utils.rs  rollout.rs  test_utils.rs  validation.rs  yaml.rs
crates/stackable-operator/src/builder/: configmap.rs  event.rs  meta.rs  mod.rs  pdb.rs
crates/stackable-operator/src/cli/: environment.rs  maintenance.rs  mod.rs  product_config.rs
crates/stackable-operator/src/client/: feature_gates.rs  mod.rs
crates/stackable-operator/src/commons/: affinity.rs  cache.rs  cluster_operation.rs  listener.rs  mod.rs  networking.rs  observability.rs  opa.rs  pdb.rs  product_image_selection.rs  random_secret_creation.rs  rbac.rs  resources.rs  s3.rs  scaling.rs  secret_class.rs  telemetry.rs  tls_verification.rs
crates/stackable-operator/src/config/: fragment.rs  merge.rs  mod.rs
crates/stackable-operator/src/constants/: mod.rs  secret.rs
crates/stackable-operator/src/crd/: maintainer.rs  mod.rs
crates/stackable-operator/src/database_connections/: helpers.rs  mod.rs  tests.rs
crates/stackable-operator/src/databases/: helpers.rs  mod.rs  tests.rs
crates/stackable-operator/src/deep_merger/: crd.rs  mod.rs
crates/stackable-operator/src/eos/: mod.rs
crates/stackable-operator/src/git_sync/: container.rs  framework.rs  mod.rs  spec.rs
crates/stackable-operator/src/helm/: mod.rs
crates/stackable-operator/src/kvp/: key.rs  mod.rs
crates/stackable-operator/src/logging/: controller.rs  k8s_events.rs  mod.rs
crates/stackable-operator/src/patchinator/: crd.rs  mod.rs
crates/stackable-operator/src/product_logging/: framework.rs  spec.rs
crates/stackable-operator/src/quantity/: cpu.rs  macros.rs  memory.rs  mod.rs  ops.rs  suffix.rs
crates/stackable-otel/: Cargo.toml
crates/stackable-otel/src/: layer.rs  lib.rs
crates/stackable-shared/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml
crates/stackable-shared/src/: crd.rs  lib.rs  secret.rs  semver.rs  yaml.rs
crates/stackable-telemetry/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml
crates/stackable-telemetry/src/: layer.rs  lib.rs  tracing.rs
crates/stackable-versioned/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
crates/stackable-versioned-macros/: .pre-commit-config.yaml  Cargo.toml
crates/stackable-versioned-macros/fixtures/: README.md
crates/stackable-versioned-macros/src/: consts.rs  lib.rs  test_utils.rs  utils.rs
crates/stackable-versioned-macros/tests/: README.md  attributes.rs  basic.rs  crd.rs  deprecate.rs  enum.rs  from.rs  rename.rs  trybuild.rs
crates/stackable-versioned/src/: apply_resource.rs  k8s.rs  lib.rs  test_utils.rs  tests.rs
crates/stackable-versioned/tests/: basic.rs  conversion.rs  conversions.rs  integration_test.rs  merged_crd.rs  person.rs  roundtrip.rs
crates/stackable-webhook/: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml
crates/stackable-webhook/src/: constants.rs  lib.rs  maintainer.rs  options.rs  tls.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
stackable-certs/: Cargo.toml
stackable-certs/src/: ca.rs  chain.rs  lib.rs  manager.rs  sign.rs
stackable-certs/src/ca/: consts.rs  k8s.rs  mod.rs
stackable-certs/src/keys/: ecdsa.rs  mod.rs  rsa.rs
stackable-certs/src/sign/: ecdsa.rs  mod.rs  rsa.rs
stackable-operator-derive/: Cargo.toml
stackable-operator-derive/src/: config.rs  fragment.rs  lib.rs  merge.rs  optional.rs
stackable-operator-derive/tests/: config.rs  optional.rs
stackable-webhook/: Cargo.toml
stackable-webhook/src/: constants.rs  conversion.rs  lib.rs  options.rs  redirect.rs  tls.rs
stackable-webhook/src/servers/: conversion.rs
stackable-webhook/src/tls/: certs.rs  mod.rs  server.rs
(+732 files in other folders)
