[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Stackable GmbH <info@stackable.de>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/stackabletech/operator-rs"

[workspace.dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.7.0" }

axum = "0.7.5"
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5.13", features = ["derive", "cargo", "env"] }
const_format = "0.2.32"
const-oid = "0.9.6"
convert_case = "0.6.0"
darling = "0.20.10"
delegate = "0.12.0"
derivative = "2.2.0"
dockerfile-parser = "0.8.0"
ecdsa = { version = "0.16.9", features = ["digest", "pem"] }
either = "1.13.0"
futures = "0.3.30"
futures-util = "0.3.30"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = "0.1.6"
itertools = "0.13.0"
json-patch = "2.0.0"
k8s-openapi = { version = "0.22.0", default-features = false, features = ["schemars", "v1_30"] }
# We use rustls instead of openssl for easier portablitly, e.g. so that we can build stackablectl without the need to vendor (build from source) openssl
kube = { version = "0.93.1", default-features = false, features = ["client", "jsonpatch", "runtime", "derive", "rustls-tls"] }
lazy_static = "1.5.0"
opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.4.0"
opentelemetry-jaeger = { version = "0.22.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.16.0"
opentelemetry-semantic-conventions = "0.15.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
pin-project = "1.1.5"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.10.6"
rsa = { version = "0.9.6", features = ["sha2"] }
rstest = "0.22.0"
rstest_reuse = "0.7.0"
schemars = { version = "0.8.21", features = ["url"] }
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34" # This is the last available version, see https://github.com/dtolnay/serde-yaml/releases/tag/0.9.34 for details
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.2.0"
snafu = "0.8.4"
stackable-operator-derive = { path = "stackable-operator-derive" }
strum = { version = "0.26.3", features = ["derive"] }
syn = "2.0.72"
tempfile = "3.11.0"
time = { version = "0.3.36" }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "fs"] }
tokio-rustls = "0.26.0"
tokio-test = "0.4.4"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = { version = "2.5.2", features = ["serde"] }
x509-cert = { version = "0.2.5", features = ["builder"] }
zeroize = "1.8.1"

# Use O3 in tests to improve the RSA key generation speed in the stackable-certs crate
[profile.test.package.stackable-certs]
opt-level = 3
[profile.test.package."rsa"]
opt-level = 3
