[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Stackable GmbH <info@stackable.de>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/stackabletech/operator-rs"

[workspace.dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.7.0" }

axum = "0.8.1"
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5.17", features = ["derive", "cargo", "env"] }
const_format = "0.2.33"
const-oid = { version = "0.9.6", features = ["db"] }
convert_case = "0.8.0"
darling = "0.20.10"
delegate = "0.13.0"
dockerfile-parser = "0.9.0"
ecdsa = { version = "0.16.9", features = ["digest", "pem"] }
educe =  { version = "0.6.0", default-features = false, features = ["Clone", "Debug", "Default", "PartialEq", "Eq"] }
either = "1.13.0"
futures = "0.3.30"
futures-util = "0.3.30"
indexmap = "2.5"
insta = { version= "1.40", features = ["glob"] }
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = "0.1.8"
itertools = "0.14.0"
json-patch = "4.0.0"
k8s-openapi = { version = "0.24.0", default-features = false, features = ["schemars", "v1_32"] }
# We use rustls instead of openssl for easier portability, e.g. so that we can build stackablectl without the need to vendor (build from source) openssl
kube = { version = "0.99.0", default-features = false, features = ["client", "jsonpatch", "runtime", "derive", "rustls-tls", "ring"] }
opentelemetry = "0.29.1"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.29.1"
opentelemetry-otlp = "0.29.0"
# opentelemetry-semantic-conventions = "0.28.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
pin-project = "1.1.5"
prettyplease = "0.2.22"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rand = "0.9.0"
rand_core = "0.6.4"
regex = "1.10.6"
rsa = { version = "0.9.6", features = ["sha2"] }
rstest = "0.25.0"
rstest_reuse = "0.7.0"
schemars = { version = "0.8.21", features = ["url"] }
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34" # This is the last available version, see https://github.com/dtolnay/serde-yaml/releases/tag/0.9.34 for details
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.2.0"
snafu = "0.8.4"
stackable-operator-derive = { path = "stackable-operator-derive" }
strum = { version = "0.27.1", features = ["derive"] }
syn = "2.0.77"
tempfile = "3.12.0"
time = { version = "0.3.36" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-rustls = "0.26.0"
tokio-test = "0.4.4"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
trybuild = "1.0.99"
url = { version = "2.5.2", features = ["serde"] }
x509-cert = { version = "0.2.5", features = ["builder"] }
zeroize = "1.8.1"

# Use O3 in tests to improve the RSA key generation speed in the stackable-certs crate
[profile.test.package]
stackable-certs.opt-level = 3
rsa.opt-level = 3

# Run snapshot testing faster even as a dev dependecy.
# See https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
