[package]
name = "stackable-certs"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ecdsa = { version = "0.16.9", features = ["digest", "pem"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
tokio-rustls = "0.25.0"
rand = "0.8.5"
rand_core = "0.6.4"
rsa = { version = "0.9.6", features = ["sha2"] }
rustls-pemfile = "2.0.0"
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.2.0"
snafu = "0.8.0"
x509-cert = { version = "0.2.5", features = ["builder"] }
