[package]
name = "stackable-certs"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
rustls = ["dep:tokio-rustls", "dep:rustls-pemfile"]
k8s = ["dep:kube", "dep:k8s-openapi"]

[dependencies]
stackable-operator = { path = ".." }

const_format = "0.2.31"
const-oid = "0.9.6"
ecdsa = { version = "0.16.9", features = ["digest", "pem"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
k8s-openapi = { version = "0.21.0", optional = true, default-features = false, features = [
  "v1_28",
] }
kube = { version = "0.88.1", optional = true, default-features = false, features = [
  "client",
  "rustls-tls",
] }
tracing = "0.1.40"
tokio-rustls = { version = "0.25.0", optional = true }
rand = "0.8.5"
rand_core = "0.6.4"
rsa = { version = "0.9.6", features = ["sha2"] }
rustls-pemfile = { version = "2.0.0", optional = true }
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.2.0"
snafu = "0.8.0"
x509-cert = { version = "0.2.5", features = ["builder"] }
zeroize = "1.7.0"
