[package]
name = "stackable-webhook"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
axum = "0.7.4"
kube = { version = "0.87.1", default-features = false }
serde_json = "1.0.104"
snafu = "0.8.0"
tokio = "1.29.1"
tower = "0.4.13"
tracing = "0.1.40"
