[package]
name = "stackable-webhook"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
axum = "0.7.4"
kube = { version = "0.87.1", default-features = false }
tokio-rustls = "0.24.1"
serde_json = "1.0.104"
snafu = "0.8.0"
tokio = "1.29.1"
tokio-test = "0.4.3"
tower = "0.4.13"
tracing = "0.1.40"
rustls-pemfile = "1.0.4"
futures-util = "0.3.30"
hyper-util = "0.1.3"
hyper = { version = "1.0.0", features = ["full"] }

[dev-dependencies]
k8s-openapi = { version = "0.20.0", default-features = false, features = [
  "v1_28",
] }
