[package]
name = "stackable-webhook"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
stackable-certs = { path = "../stackable-certs", features = ["webhook"] }

axum = "0.7.4"
kube = { version = "0.88.1", default-features = false }
tokio-rustls = "0.25.0"
serde_json = "1.0.104"
snafu = "0.8.0"
tokio = "1.29.1"
tokio-test = "0.4.3"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
rustls-pemfile = "2.0.0"
futures-util = "0.3.30"
hyper-util = "0.1.3"
hyper = { version = "1.0.0", features = ["full"] }

[dev-dependencies]
k8s-openapi = { version = "0.21.0", default-features = false, features = [
  "v1_28",
] }
