[package]
name = "containerdebug"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hickory-resolver = "0.25"
local-ip-address = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.9"
sysinfo = { version = "0.38", features = ["serde"] }
tokio = { version = "1.49", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

stackable-shared = {git = "https://github.com/stackabletech/operator-rs", tag = "stackable-operator-0.107.0", default-features = false }
stackable-telemetry = {git = "https://github.com/stackabletech/operator-rs", tag = "stackable-operator-0.107.0", default-features = false, features = ["clap"] }

[build-dependencies]
built = { version = "0.8", features = ["chrono", "git2"] }
