[package]
name = "containerdebug"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
hickory-resolver = "0.26"
local-ip-address = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.9"
sysinfo = { version = "0.39", features = ["serde"] }
tokio = { version = "1.51", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

stackable-shared = {git = "https://github.com/stackabletech/operator-rs", tag = "stackable-shared-0.1.1", default-features = false }
stackable-telemetry = {git = "https://github.com/stackabletech/operator-rs", tag = "stackable-telemetry-0.6.4", default-features = false, features = ["clap"] }

[build-dependencies]
built = { version = "0.8", features = ["chrono", "git2"] }
