[package]
name = "containerdebug"
version = "0.4.1"
edition.workspace = true

[dependencies]
clap.workspace = true
hickory-resolver.workspace = true
local-ip-address.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
sysinfo = { workspace = true, features = ["serde"] }
tokio.workspace = true
tracing.workspace = true

stackable-shared = { path = "../stackable-shared", default-features = false }
stackable-telemetry = { path = "../stackable-telemetry", default-features = false, features = ["clap"] }

[build-dependencies]
built = { workspace = true, features = ["chrono", "git2"] }
