[package]
name = "k8s-version"
version = "0.1.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
darling = ["dep:darling"]

[dependencies]
darling = { workspace = true, optional = true }
regex.workspace = true
snafu.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
