[package]
name = "k8s-version"
version = "0.1.3"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
darling = ["dep:darling"]
serde = ["dep:serde"]

[dependencies]
darling = { workspace = true, optional = true }
regex.workspace = true
serde = { workspace = true, optional = true }
snafu.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde_yaml.workspace = true
syn.workspace = true
