[package]
name = "stackable-operator-macros"
description = "Declaritive macros for the Stackable Operator Framework"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
stackable-operator = { path = "../.." }
