[package]
name = "stackable-crd-previewer"
description = "Previews parts of our CRD, so that the effect of changes to operators can be determined more easily"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
stackable-shared = { path = "../stackable-shared" }
stackable-operator = { path = "../stackable-operator" }

snafu.workspace = true

[build-dependencies]
stackable-shared = { path = "../stackable-shared" }
stackable-operator = { path = "../stackable-operator" }

snafu.workspace = true
