[package]
name = "stackable-operator-derive"
description = "Derive macros for the Stackable Operator Framework"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.28"

[dev-dependencies]
stackable-operator = { path = "../stackable-operator" }
