[package]
name = "stackable-operator-derive"
description = "Derive macros for the Stackable Operator Framework"
version = "0.2.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["stackable-operator"]

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
stackable-operator = { path = "../stackable-operator" }
