[package]
name = "stackable-operator"
description = "Stackable Operator Framework"
version = "0.93.2"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
full = ["time", "telemetry", "versioned"]
default = ["telemetry", "versioned"]
time = ["dep:time"]
telemetry = []
versioned = []

[dependencies]
stackable-telemetry = { path = "../stackable-telemetry", features = ["clap"] }
stackable-operator-derive = { path = "../stackable-operator-derive" }
stackable-versioned = { path = "../stackable-versioned" }
stackable-shared = { path = "../stackable-shared" }

chrono.workspace = true
clap.workspace = true
const_format.workspace = true
delegate.workspace = true
dockerfile-parser.workspace = true
either.workspace = true
educe.workspace = true
futures.workspace = true
indexmap.workspace = true
json-patch.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
product-config.workspace = true
regex.workspace = true
schemars.workspace = true
semver.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
time = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
