[package]
name = "stackable-operator"
description = "Stackable Operator Framework"
version = "0.98.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
full = ["certs", "telemetry", "versioned", "time", "webhook", "clap"]
default = ["telemetry", "versioned", "clap"]

clap = []
certs = ["dep:stackable-certs"]
telemetry = ["dep:stackable-telemetry"]
time = ["stackable-shared/time"]
versioned = ["dep:stackable-versioned"]
webhook = ["dep:stackable-webhook"]

[dependencies]
stackable-certs = { path = "../stackable-certs", optional = true }
stackable-operator-derive = { path = "../stackable-operator-derive" }
stackable-shared = { path = "../stackable-shared", features = ["chrono", "time"]}
stackable-telemetry = { path = "../stackable-telemetry", optional = true, features = ["clap"] }
stackable-versioned = { path = "../stackable-versioned", optional = true }
stackable-webhook = { path = "../stackable-webhook", optional = true }

chrono.workspace = true
clap.workspace = true
const_format.workspace = true
delegate.workspace = true
dockerfile-parser.workspace = true
either.workspace = true
educe.workspace = true
futures.workspace = true
http.workspace = true
indexmap.workspace = true
json-patch.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
product-config.workspace = true
regex.workspace = true
schemars.workspace = true
semver.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
