[package]
name = "stackable-operator"
description = "Stackable Operator Framework"
version = "0.106.2"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
# --- The section below defines features which are collections of other features ---
# NOTE (@Techassi): These lists should be kept in the same order as features are defined below.
full = ["clap", "crd", "telemetry", "webhook", "time", "certs"]
default = ["clap", "crd", "telemetry"]

# --- The section below defines features which toggle individual functionality ---

# This feature enables support for clap on various structs and enums to be used in clap-based CLIs.
clap = ["stackable-telemetry/clap"]

# This feature enables various (versioned) CRD structs and enums to be exported.
crd = ["dep:stackable-versioned"]

telemetry = ["dep:stackable-telemetry"]
webhook = ["dep:stackable-webhook"]
time = ["stackable-shared/time"]
certs = ["dep:stackable-certs"]

[dependencies]
stackable-certs = { path = "../stackable-certs", optional = true }
stackable-operator-derive = { path = "../stackable-operator-derive" }
stackable-shared = { path = "../stackable-shared", features = ["time", "jiff"] }
stackable-telemetry = { path = "../stackable-telemetry", optional = true, features = ["clap"] }
stackable-versioned = { path = "../stackable-versioned", optional = true }
stackable-webhook = { path = "../stackable-webhook", optional = true }

clap.workspace = true
const_format.workspace = true
delegate.workspace = true
dockerfile-parser.workspace = true
either.workspace = true
educe.workspace = true
futures.workspace = true
http.workspace = true
indexmap.workspace = true
jiff.workspace = true
json-patch.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
product-config.workspace = true
regex.workspace = true
schemars.workspace = true
semver.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
