[package]
name = "stackable-shared"
version = "0.0.3"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
full = ["chrono", "time"]
default = ["time"]

chrono = ["dep:chrono"]
time = ["dep:time"]

[dependencies]
chrono = { workspace = true, optional = true }
k8s-openapi.workspace = true
kube.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
strum.workspace = true
time = { workspace = true, optional = true }

[dev-dependencies]
k8s-openapi.workspace = true
rstest.workspace = true

[lints]
workspace = true
