[package]
name = "stackable-shared"
version = "0.0.4"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
full = ["jiff", "time"]
default = ["time"]

jiff = ["dep:jiff"]
time = ["dep:time"]

[dependencies]
jiff = { workspace = true, optional = true }
k8s-openapi.workspace = true
kube.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
strum.workspace = true
time = { workspace = true, optional = true }

[dev-dependencies]
k8s-openapi.workspace = true
rstest.workspace = true

[lints]
workspace = true
