[package]
name = "stackable-telemetry"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp = { workspace = true, features = ["gzip-tonic"] }
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
pin-project.workspace = true
snafu.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tokio.workspace = true
tracing-opentelemetry.workspace = true
