[package]
name = "stackable-versioned-macros"
version = "0.1.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
k8s-version = { path = "../k8s-version", features = ["darling"] }

convert_case.workspace = true
darling.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
strum.workspace = true
syn.workspace = true
quote.workspace = true

[dev-dependencies]
rstest.workspace = true
trybuild.workspace = true
