[package]
name = "stackable-versioned-macros"
version = "0.7.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# Enable all features to ensure content appears in the online documentation.
[package.metadata."docs.rs"]
all-features = true

[package.metadata.cargo-udeps.ignore]
# cargo-udeps throws an error stating that these dependencies are unused. They
# are, however, used in K8s specific test cases. This is a false-positive and an
# apparent limitation of cargo-udeps. These entries can be removed once
# cargo-udeps supports detecting usage of such dependencies.
development = ["k8s-openapi", "schemars", "serde_yaml", "stackable-versioned"]

# cargo-udeps throws an error stating that these dependencies are unused. They are all marked as
# optional, which trips up cargo-udeps for whatever reason...
normal = ["k8s-openapi", "kube"]

[lib]
proc-macro = true

[dependencies]
k8s-version = { path = "../k8s-version", features = ["darling"] }

convert_case.workspace = true
darling.workspace = true
indoc.workspace = true
itertools.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true

[dev-dependencies]
# Only needed for doc tests / examples
stackable-versioned = { path = "../stackable-versioned" }

insta.workspace = true
prettyplease.workspace = true
regex.workspace = true
rstest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
tracing.workspace = true
trybuild.workspace = true
