[package]
name = "stackable-versioned"
version = "0.8.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# Enable all features to ensure content appears in the online documentation.
[package.metadata."docs.rs"]
all-features = true

[dependencies]
stackable-versioned-macros = { path = "../stackable-versioned-macros" }

schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true

[dev-dependencies]
insta.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
